--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
         </div>
         
         <div class="button-container">
-            <a href="Varun_Sinha_Re_edited.pdf" class="button" download>Download Resume</a>
+            <a href="vsresume.pdf" class="button" download>Download Resume</a>
         </div>
         
         <div class="resume-content">
